--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,7 @@
     <h1>testing<h1>
-
-
-        
+<% @team.each do |team|%>
+    <ul>
+        <li><%= team.name %></li>
+        <li><%= team.motto %></li>
+    </ul>
+<%end%>
