automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,1 +1,11 @@
     <h1>testing<h1>
+
+    <% @team.each do |team|%>
+        <ul>
+            <li><%= team.name %></li>
+            <li><%= team.motto %></li>
+            <h2>heros</h2>
+            <li><%= team.motto %></li>
+            
+        </ul>
+    <%end%>
