--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,11 +1,10 @@
     <h1>testing<h1>
-
-    <% @team.each do |team|%>
+<h2>heros</h2>
+    <% @heros.each do |hero| %>
         <ul>
-            <li><%= team.name %></li>
-            <li><%= team.motto %></li>
-            <h2>heros</h2>
-            <li><%= team.motto %></li>
-            
+            <li><%= hero.name %></li>
+            <li><%= hero.power %></li>
+            <li><%= hero.bio %></li>
+
         </ul>
     <%end%>
