automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,8 @@
 <h1>testing<h1>
 <h1>Team</h1>
-    
+<%= @team.name%>
+<%= @team.motto%>
+
 <h2>heros</h2>
     <% @heros.each do |hero| %>
         <ul>
