--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,7 +4,7 @@
 <%= @team.motto%>
 
 <h2>heros</h2>
-    <% @heros.each do |hero| %>
+    <% @heros.each_with_index do |hero, index| %>
         <ul>
             <li><%= hero.name %></li>
             <li><%= hero.power %></li>
