automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -6,7 +6,7 @@
 <h2>heros</h2>
     <% @heros.each_with_index do |hero, index| %>
         <ul>
-            <h3><%=index%><h3>
+            <h3>Hero #<%=index%><h3>
             <li><%= hero.name %></li>
             <li><%= hero.power %></li>
             <li><%= hero.bio %></li>
