--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,7 +1,7 @@
 <h1>testing<h1>
 <h1>Team</h1>
 <%= @team.name%>
-<h1>Team Motto: </h1><%= @team.motto%>
+<h1>Team Motto: <%= @team.motto%></h1>
 
 <h2>heros</h2>
     <% @heros.each_with_index do |hero, index| %>
