automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1>testing<h1>
 <h1>Team</h1>
-<%= @team.name%>
+<h1>Team: <%= @team.name%></h1>
 <h1>Team Motto: <%= @team.motto%></h1>
 
 <h2>heros</h2>
