--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,7 +1,14 @@
-    <h1>testing<h1>
-<% @team.each do |team|%>
-    <ul>
-        <li><%= team.name %></li>
-        <li><%= team.motto %></li>
-    </ul>
-<%end%>
+<h1>testing<h1>
+<h1>Team</h1>
+<h1>Team: <%= @team.name%></h1>
+<h1>Team Motto: <%= @team.motto%></h1>
+
+<h2>heros</h2>
+    <% @heros.each_with_index do |hero, index| %>
+        <ul>
+            <h3>Hero #<%=index + 1%><h3>
+            <li>Hero Name: <%= hero.name %></li>
+            <li>Hero Power: <%= hero.power %></li>
+            <li>Hero Biography: <%= hero.bio %></li>
+        </ul>
+    <%end%>
